samples/_failures_safe/1761472222_3f1a28_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af9350eb.c: In function ‘main’:
./samples/SAFE/__tmp_af9350eb.c:161:42: error: expected ‘)’ at end of input
  161 |                 state_display_result(&ctx
      |                                     ~    ^
      |                                          )
./samples/SAFE/__tmp_af9350eb.c:161:17: error: expected declaration or statement at end of input
  161 |                 state_display_result(&ctx
      |                 ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_af9350eb.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_af9350eb.c:161:17: error: expected declaration or statement at end of input
